--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@mui/material": "^5.14.18",
     "@sentry/nextjs": "^7.81.0",
     "@svgr/webpack": "^8.1.0",
+    "@thirdweb-dev/react": "^4.9.4",
+    "@thirdweb-dev/sdk": "^4.0.99",
+    "ethers": "^6.13.4",
     "firebase": "^10.6.0",
     "firebase-admin": "^11.11.0",
     "firebaseui": "^6.1.0",
